[package]
name = "creekey"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
ctrlc = "3.1.9"
base64 = "0.13.0"
dirs = "3.0.2"
byteorder = "1.4.3"
sodiumoxide = "0.2.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
qrcode = "0.12.0"
serde = { version = "1.0", features = ["derive"]}
thiserror = "1.0.26"
anyhow = "1.0.42"
clap = "2.33.3"
clipboard = "0.5"
