[package]
name = "creekey"
version = "0.1.0"
edition = "2018"
authors = ["Opencreek Technogoly UG"]
repository = "https://github.com/opencreek/creekey"
description = "Story your Private Keys on your Phone!"
license = "UNLICENSED"
homepage = "https://creekey.io"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.1.9"
base64 = "0.13.0"
dirs = "3.0.2"
byteorder = "1.4.3"
sodiumoxide = "0.2.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
qrcode = "0.12.0"
serde = { version = "1.0", features = ["derive"]}
thiserror = "1.0.26"
anyhow = "1.0.42"
clap = "2.33.3"
clipboard = "0.5"
whoami = "1.1.2"
os_pipe = "0.9.2"
colored = "2"
proctitle="0.1.1"
daemonize="0.4.1"
ssh-parser="0.4.0"
sha2="0.9.5"
futures="0.3"
tokio= { version = "1.10.0", features=["full"]}
thrussh-keys={version="0.21.0", features=["openssl"]}
ecdsa= { version="0.12.4"}
ring-compat={ version="0.3.1", features=["signature"]}
openssl="0.10.36"
keyring="0.10.1"
pgp="0.7.1"

[[bin]]
name = "creekey-git-sign"
path = "src/git.rs"

[[bin]]
name = "creekey"
path = "src/main.rs"
